# https://pypi.org/project/setupcfg-generator/
[metadata]
name = postgres-mktempdb
version = 2019.5.22
url = https://github.com/looking-for-a-job/postgres-mktempdb
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = backup aws s3

[options]
install_requires = 
	setuptools
scripts = 
	scripts/mktempdb
