# https://pypi.org/project/setupcfg-generator/
[metadata]
name = postgres-mktempdb
version = 2019.5.23
url = https://github.com/looking-for-a-job/postgres-mktempdb
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = postgres temp

[options]
install_requires = 
	setuptools
scripts = 
	scripts/mktempdb
